# mcp-rag-server

./: .env.sample  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
data/source/markdown/: machine_learning_basics.md  python_basics.md
docs/: design.md
src/: __init__.py  cli.py  document_processor.py  embedding_generator.py  example_tool.py  main.py  mcp_server.py  rag_service.py  rag_tools.py  vector_database.py
tests/: test_example_tool.py  test_mcp_server.py
